Contact us updated, styling updated

--- a/app/about.html
+++ b/app/about.html
@@ -44,6 +44,7 @@
     </header>
 
     <main>
+      <h1>About Us</h1>
       <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Programs will be created on an individualized basis and monitored closely to ensure your family receives the services needed with our main goal being to hopefully make your days easier.</p>
 
       <p>Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
