--- a/app/contact.html
+++ b/app/contact.html
@@ -44,7 +44,25 @@
     </header>
 
     <main>
-      
+      <h1>Contact Us</h1>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a></p>
+      <p>Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+
+      <form>
+        <label for="name">Your Name:</label>
+        <input type="text" id="name" name="name">
+
+        <label for="email">Your Email:</label>
+        <input type="text" id="email" name="email">
+
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject">
+
+        <label for="message">Your Message:</label>
+        <textarea id="message" name="message"></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
     </main>
 
     <footer>
