--- a/app/services.html
+++ b/app/services.html
@@ -44,6 +44,7 @@
     </header>
 
     <main>
+      <h1>Services</h1>
       <p>With many insurance companies covering behavior consultation, many still do not and families are left frustrated.  We understand this struggle and for that reason, it is our goal to see that every family has access to the services that they need and deserve. Behavior Solutions of Indiana offers private pay consultation rates based on total gross household income so you can get the help you need at a price you can afford. Total number of consultation hours per week will be determined on an individualized basis according to the needs of your family.</p>
 
       <p>Behavior Therapy Services include:
