Minor SEO edits.

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="Behavior Solutions of Indiana provides ABA therapy in the Indianapolis area.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web Starter Kit</title>
+    <title>Behavior Solutions of Indiana | Indianapolis Autism ABA Therapy</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -45,6 +45,7 @@
     </header>
 
     <main>
+      <h1>Why Behavior Solutions of Indiana?</h1>
       <p>Behavior Solutions of Indiana uses the fundamental principles of Applied Behavior Analysis (ABA) to guide and direct treatment programs helping children with special needs reach their full potential.  We believe in a full family approach.  While programs will be individualized to meet the needs of each child, we feel the best benefit comes when the entire family is engaged and participates in the programming.  Please <a href="contact.html">contact us</a> for more information on our therapy programs.</p>
 
       <p>Behavior Solutions of Indiana currently provides services in the following areas:
