Added footer, fixed form on mobile and clearfix

--- a/app/services.html
+++ b/app/services.html
@@ -66,7 +66,9 @@
     </main>
 
     <footer>
-      <p>Footer stuff!</p>
+      <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <p>Web Design by Sam Hollis</p>
     </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
