--- a/app/contact.html
+++ b/app/contact.html
@@ -35,10 +35,10 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="contact.html" class="selected">Contact Us</a></li>
         </ul>
       </nav>
     </header>
@@ -66,9 +66,10 @@
     </main>
 
     <footer>
-      <p>Footer stuff!</p>
+      <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <p>Web Design by Sam Hollis</p>
     </footer>
-
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
