--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Behavior Solutions of Indiana provides ABA therapy in the Indianapolis area.">
+    <meta name="description" content="We offer behavior consultation,autism consultation, and ABA therapy services for children and families in central Indiana. Let's make a difference together!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Behavior Solutions of Indiana | Indianapolis Autism ABA Therapy</title>
+    <title>Behavior Solutions of Indiana | Autism Consultation and ABA Therapy</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -61,7 +61,9 @@
     </main>
 
     <footer>
-      <p>Footer stuff!</p>
+      <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <p>Web Design by Sam Hollis</p>
     </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
