--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="images/logo.jpg" id="logo">
+        <img src="images/logo.jpg" id="logo" alt="logo">
       </a>
       <nav>
         <ul>
@@ -48,7 +48,7 @@
       <h1>Why Behavior Solutions of Indiana?</h1>
       <p>Behavior Solutions of Indiana uses the fundamental principles of Applied Behavior Analysis (ABA) to guide and direct treatment programs helping children with special needs reach their full potential.  We believe in a full family approach.  While programs will be individualized to meet the needs of each child, we feel the best benefit comes when the entire family is engaged and participates in the programming.  Please <a href="contact.html">contact us</a> for more information on our therapy programs.</p>
 
-      <p>Behavior Solutions of Indiana currently provides services in the following areas:
+      <p>Behavior Solutions of Indiana currently provides services in the following areas:</p>  
         <ul>
           <li>Indianapolis</li>
           <li>Fishers</li>
@@ -57,7 +57,6 @@
           <li>Fortville</li>
           <li>Greenfield</li>
         </ul>
-      </p>
     </main>
 
     <footer>
