--- a/app/contact.html
+++ b/app/contact.html
@@ -31,7 +31,7 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="images/logo.jpg" id="logo">
+        <img src="images/logo.jpg" id="logo" alt="logo">
       </a>
       <nav>
         <ul>
