Icons on contact us

--- a/app/contact.html
+++ b/app/contact.html
@@ -45,8 +45,10 @@
 
     <main>
       <h1>Contact Us</h1>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a></p>
-      <p>Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <ul class="contact-info">
+        <li class="phone"><a href="tel:3173717315">(317) 371-7315</a></li>
+        <li class="email"><a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></li>
+      </ul>
 
       <form>
         <label for="name">Your Name:</label>
