--- a/app/contact.html
+++ b/app/contact.html
@@ -50,7 +50,7 @@
         <li class="email"><a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></li>
       </ul>
 
-      <form>
+      <form action="/cgi-bin/FormMail.pl" method="post">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name">
 
