--- a/app/index.html
+++ b/app/index.html
@@ -31,17 +31,19 @@
 
   <body>
     <header>
-      <a href="index.html">
-        <img src="images/logo.jpg" id="logo" alt="logo">
-      </a>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="selected">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
+      <div id="header-wrap">
+        <a href="index.html">
+          <img src="images/logo.jpg" id="logo" alt="logo">
+        </a>
+        <nav>
+          <ul>
+            <li><a href="index.html" class="selected">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
