--- a/app/about.html
+++ b/app/about.html
@@ -36,9 +36,9 @@
         </a>
         <nav>
           <ul>
-            <li><a href="index.html" class="selected">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about.html" class="selected">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
