Updated content and email

--- a/app/about.html
+++ b/app/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Behavior Solutions of Indiana | About Us</title>
+    <title>About Us | Behavior Solutions of Indiana</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -47,14 +47,18 @@
 
     <main>
       <h1>About Us</h1>
-      <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Programs will be created on an individualized basis and monitored closely to ensure your family receives the services needed with our main goal being to hopefully make your days easier.</p>
+      <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Programs will be created on an individualized basis and monitored closely to ensure your family receives the services needed with our main goal being to make your days easier.</p>
+
+      <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As the mother of four, one of which is has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
+
+      <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective, most ethical services for our families.</p>
 
       <p>Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
     </main>
 
     <footer>
       <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
       <p>Web Design by Sam Hollis</p>
     </footer>
 
