--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,8 @@
       <h1>Why Behavior Solutions of Indiana?</h1>
       <p>Behavior Solutions of Indiana uses the fundamental principles of Applied Behavior Analysis (ABA) to guide and direct treatment programs helping children with special needs reach their full potential.  We believe in a full family approach.  While programs will be individualized to meet the needs of each child, we feel the best benefit comes when the entire family is engaged and participates in the programming.  Please <a href="contact.html">contact us</a> for more information on our therapy programs.</p>
 
+      <p>We are committed to providing caring, professional behavior services and we bring those services to you &mdash; in your home and in your community.</p>
+
       <p>Behavior Solutions of Indiana currently provides services in the following areas:</p>  
         <ul>
           <li>Indianapolis</li>
@@ -63,7 +65,7 @@
 
     <footer>
       <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
       <p>Web Design by Sam Hollis</p>
     </footer>
 
