--- a/app/services.html
+++ b/app/services.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Behavior Solutions of Indiana | Our Services</title>
+    <title>Our Services | Behavior Solutions of Indiana</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -48,6 +48,7 @@
     <main>
       <h1>Services</h1>
       <p>With many insurance companies covering behavior consultation, many still do not and families are left frustrated.  We understand this struggle and for that reason, it is our goal to see that every family has access to the services that they need and deserve. Behavior Solutions of Indiana offers private pay consultation rates based on total gross household income so you can get the help you need at a price you can afford. Total number of consultation hours per week will be determined on an individualized basis according to the needs of your family.</p>
+      <p>Applied Behavior Analysis (ABA) programs are supervised by a Board Certified Behavior Analyst (BCBA).</p>
 
       <p>Behavior Therapy Services include:
         <ul>
@@ -64,12 +65,12 @@
         </ul>
       </p>
 
-      <p>For further details, please contact us at <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a>.</p>
+      <p>For further details, please contact us at <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a>.</p>
     </main>
 
     <footer>
       <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
       <p>Web Design by Sam Hollis</p>
     </footer>
 
