--- a/app/contact.html
+++ b/app/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Behavior Solutions of Indiana | Contact Us</title>
+    <title>Contact Us | Behavior Solutions of Indiana</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -49,7 +49,7 @@
       <h1>Contact Us</h1>
       <ul class="contact-info">
         <li class="phone"><a href="tel:3173717315">(317) 371-7315</a></li>
-        <li class="email"><a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></li>
+        <li class="email"><a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></li>
       </ul>
 
       <form action="/cgi-bin/FormMail.pl" method="post">
@@ -71,7 +71,7 @@
 
     <footer>
       <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:laura@behaviorsolutionsindiana.com">laura@behaviorsolutionsindiana.com</a></p>
+      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
       <p>Web Design by Sam Hollis</p>
     </footer>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
