--- a/app/about.html
+++ b/app/about.html
@@ -53,7 +53,9 @@
 
       <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective, most ethical services for our families.</p>
 
-      <p>Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
+      <img src="images/boy.jpg" alt="boy" id="boy-img">
+
+      <p id="child-first">Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
     </main>
 
     <footer>
