--- a/app/services.html
+++ b/app/services.html
@@ -66,6 +66,8 @@
       </p>
 
       <p>For further details, please contact us at <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a>.</p>
+
+      <img src="images/baby.jpg" alt="baby" id="baby-img">
     </main>
 
     <footer>
