--- a/app/about.html
+++ b/app/about.html
@@ -47,15 +47,16 @@
 
     <main>
       <h1>About Us</h1>
-      <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Programs will be created on an individualized basis and monitored closely to ensure your family receives the services needed with our main goal being to make your days easier.</p>
 
-      <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As the mother of four, one of which is has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
+      <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As the mother of four, one of which is has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
 
-      <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective, most ethical services for our families.</p>
+      <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families.</p>
 
       <img src="images/boy.jpg" alt="boy" id="boy-img">
 
       <p id="child-first">Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
+
+      <img src="images/butterfly.png" alt="butterfly" id="butterfly">
     </main>
 
     <footer>
