Updated footer to stick to bottom

--- a/app/about.html
+++ b/app/about.html
@@ -28,42 +28,45 @@
     <!-- Page styles -->
     <link rel="stylesheet" href="styles/main.css">
   </head>
+
   <body>
-    <header>
-      <div id="header-wrap">
-        <a href="index.html">
-          <img src="images/logo.jpg" id="logo" alt="logo">
-        </a>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="about.html" class="selected">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <div id="body-wrap">
+      <header>
+        <div id="header-wrap">
+          <a href="index.html">
+            <img src="images/logo.jpg" id="logo" alt="logo">
+          </a>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="about.html" class="selected">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
 
-    <main>
-      <h1>About Us</h1>
+      <main>
+        <h1>About Us</h1>
 
-      <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As the mother of four, one of which is has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
+        <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As the mother of four, one of which is has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
 
-      <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families.</p>
+        <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families.</p>
 
-      <img src="images/boy.jpg" alt="boy" id="boy-img">
+        <img src="images/boy.jpg" alt="boy" id="boy-img">
 
-      <p id="child-first">Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
+        <p id="child-first">Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
 
-      <img src="images/butterfly.png" alt="butterfly" id="butterfly">
-    </main>
+        <img src="images/butterfly.png" alt="butterfly" id="butterfly">
+      </main>
 
-    <footer>
-      <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
-      <p>Web Design by Sam Hollis</p>
-    </footer>
+      <footer>
+        <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+        <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
+        <p>Web Design by Sam Hollis</p>
+      </footer>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
