--- a/app/index.html
+++ b/app/index.html
@@ -30,52 +30,54 @@
   </head>
 
   <body>
-    <header>
-      <div id="header-wrap">
-        <a href="index.html">
-          <img src="images/logo.jpg" id="logo" alt="logo">
-        </a>
-        <nav>
+    <div id="body-wrap">
+      <header>
+        <div id="header-wrap">
+          <a href="index.html">
+            <img src="images/logo.jpg" id="logo" alt="logo">
+          </a>
+          <nav>
+            <ul>
+              <li><a href="index.html" class="selected">Home</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      <main>
+        <h1>Why Behavior Solutions of Indiana?</h1>
+
+        <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Programs will be created on an individualized basis and monitored closely to ensure your family receives the services needed with our main goal being to make your days easier.</p>
+
+        <p>Behavior Solutions of Indiana uses the fundamental principles of Applied Behavior Analysis (ABA) to guide and direct treatment programs helping children with special needs reach their full potential.  We believe in a full family approach.  While programs will be individualized to meet the needs of each child, we feel the best benefit comes when the entire family is engaged and participates in the programming.  Please <a href="contact.html">contact us</a> for more information on our therapy programs.</p>
+
+        <p>We are committed to providing caring, professional behavior services and we bring those services to you &mdash; in your home and in your community.</p>
+
+        <p>Behavior Solutions of Indiana currently provides services in the following areas:</p>  
           <ul>
-            <li><a href="index.html" class="selected">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li>Indianapolis</li>
+            <li>Fishers</li>
+            <li>Carmel</li>
+            <li>Noblesville</li>
+            <li>Fortville</li>
+            <li>Greenfield</li>
+            <li>Brownsburg</li>
+            <li>Avon</li>
+            <li>Plainfield</li>
+            <li>Greenwood</li>
+            <li>Zionsville</li>
           </ul>
-        </nav>
-      </div>
-    </header>
+      </main>
 
-    <main>
-      <h1>Why Behavior Solutions of Indiana?</h1>
-
-      <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Programs will be created on an individualized basis and monitored closely to ensure your family receives the services needed with our main goal being to make your days easier.</p>
-
-      <p>Behavior Solutions of Indiana uses the fundamental principles of Applied Behavior Analysis (ABA) to guide and direct treatment programs helping children with special needs reach their full potential.  We believe in a full family approach.  While programs will be individualized to meet the needs of each child, we feel the best benefit comes when the entire family is engaged and participates in the programming.  Please <a href="contact.html">contact us</a> for more information on our therapy programs.</p>
-
-      <p>We are committed to providing caring, professional behavior services and we bring those services to you &mdash; in your home and in your community.</p>
-
-      <p>Behavior Solutions of Indiana currently provides services in the following areas:</p>  
-        <ul>
-          <li>Indianapolis</li>
-          <li>Fishers</li>
-          <li>Carmel</li>
-          <li>Noblesville</li>
-          <li>Fortville</li>
-          <li>Greenfield</li>
-          <li>Brownsburg</li>
-          <li>Avon</li>
-          <li>Plainfield</li>
-          <li>Greenwood</li>
-          <li>Zionsville</li>
-        </ul>
-    </main>
-
-    <footer>
-      <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
-      <p>Web Design by Sam Hollis</p>
-    </footer>
+      <footer>
+        <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+        <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
+        <p>Web Design by Sam Hollis</p>
+      </footer>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
