--- a/app/services.html
+++ b/app/services.html
@@ -28,53 +28,56 @@
     <!-- Page styles -->
     <link rel="stylesheet" href="styles/main.css">
   </head>
+  
   <body>
-    <header>
-      <div id="header-wrap">
-        <a href="index.html">
-          <img src="images/logo.jpg" id="logo" alt="logo">
-        </a>
-        <nav>
+    <div id="body-wrap">
+      <header>
+        <div id="header-wrap">
+          <a href="index.html">
+            <img src="images/logo.jpg" id="logo" alt="logo">
+          </a>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="services.html" class="selected">Services</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      <main>
+        <h1>Services</h1>
+        <p>With many insurance companies covering behavior consultation, many still do not and families are left frustrated.  We understand this struggle and for that reason, it is our goal to see that every family has access to the services that they need and deserve. Behavior Solutions of Indiana offers private pay consultation rates based on total gross household income so you can get the help you need at a price you can afford. Total number of consultation hours per week will be determined on an individualized basis according to the needs of your family.</p>
+        <p>Applied Behavior Analysis (ABA) programs are supervised by a Board Certified Behavior Analyst (BCBA).</p>
+
+        <p>Behavior Therapy Services include:
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html" class="selected">Services</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li>Toilet Training</li>
+            <li>Parent Coaching</li>
+            <li>Individualized Behavior Plans</li>
+            <li>Community Involvement Programs</li>
+            <li>Socialization Training</li>
+            <li>Learning Readiness Programs</li>
+            <li>Life Skills</li>
+            <li>Family Interaction Programs</li>
+            <li>Assistance with other interventions</li>
+            <li>Advocacy for IEPs and School Collaboration</li>
           </ul>
-        </nav>
-      </div>
-    </header>
+        </p>
 
-    <main>
-      <h1>Services</h1>
-      <p>With many insurance companies covering behavior consultation, many still do not and families are left frustrated.  We understand this struggle and for that reason, it is our goal to see that every family has access to the services that they need and deserve. Behavior Solutions of Indiana offers private pay consultation rates based on total gross household income so you can get the help you need at a price you can afford. Total number of consultation hours per week will be determined on an individualized basis according to the needs of your family.</p>
-      <p>Applied Behavior Analysis (ABA) programs are supervised by a Board Certified Behavior Analyst (BCBA).</p>
+        <p>For further details, please contact us at <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a>.</p>
 
-      <p>Behavior Therapy Services include:
-        <ul>
-          <li>Toilet Training</li>
-          <li>Parent Coaching</li>
-          <li>Individualized Behavior Plans</li>
-          <li>Community Involvement Programs</li>
-          <li>Socialization Training</li>
-          <li>Learning Readiness Programs</li>
-          <li>Life Skills</li>
-          <li>Family Interaction Programs</li>
-          <li>Assistance with other interventions</li>
-          <li>Advocacy for IEPs and School Collaboration</li>
-        </ul>
-      </p>
+        <img src="images/baby.jpg" alt="baby" id="baby-img">
+      </main>
 
-      <p>For further details, please contact us at <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a>.</p>
-
-      <img src="images/baby.jpg" alt="baby" id="baby-img">
-    </main>
-
-    <footer>
-      <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
-      <p>Web Design by Sam Hollis</p>
-    </footer>
+      <footer>
+        <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+        <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
+        <p>Web Design by Sam Hollis</p>
+      </footer>
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
