--- a/app/contact.html
+++ b/app/contact.html
@@ -28,52 +28,56 @@
     <!-- Page styles -->
     <link rel="stylesheet" href="styles/main.css">
   </head>
+
   <body>
-    <header>
-      <div id="header-wrap">
-        <a href="index.html">
-          <img src="images/logo.jpg" id="logo" alt="logo">
-        </a>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html" class="selected">Contact Us</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <div id="body-wrap">
+      <header>
+        <div id="header-wrap">
+          <a href="index.html">
+            <img src="images/logo.jpg" id="logo" alt="logo">
+          </a>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html" class="selected">Contact Us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
 
-    <main>
-      <h1>Contact Us</h1>
-      <ul class="contact-info">
-        <li class="phone"><a href="tel:3173717315">(317) 371-7315</a></li>
-        <li class="email"><a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></li>
-      </ul>
+      <main>
+        <h1>Contact Us</h1>
+        <ul class="contact-info">
+          <li class="phone"><a href="tel:3173717315">(317) 371-7315</a></li>
+          <li class="email"><a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></li>
+        </ul>
 
-      <form action="/cgi-bin/FormMail.pl" method="post">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name">
+        <form action="/cgi-bin/FormMail.pl" method="post">
+          <label for="name">Your Name:</label>
+          <input type="text" id="name" name="name">
 
-        <label for="email">Your Email:</label>
-        <input type="text" id="email" name="email">
+          <label for="email">Your Email:</label>
+          <input type="text" id="email" name="email">
 
-        <label for="subject">Subject:</label>
-        <input type="text" id="subject" name="subject">
+          <label for="subject">Subject:</label>
+          <input type="text" id="subject" name="subject">
 
-        <label for="message">Your Message:</label>
-        <textarea id="message" name="message"></textarea>
+          <label for="message">Your Message:</label>
+          <textarea id="message" name="message"></textarea>
 
-        <button type="submit">Submit</button>
-      </form>
-    </main>
+          <button type="submit">Submit</button>
+        </form>
+      </main>
 
-    <footer>
-      <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-      <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
-      <p>Web Design by Sam Hollis</p>
-    </footer>
+      <footer>
+        <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+        <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
+        <p>Web Design by Sam Hollis</p>
+      </footer>
+    </div>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
