--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
       <header>
         <div id="header-wrap">
           <a href="index.html">
-            <img src="images/logo.jpg" id="logo" alt="logo">
+            <img src="images/logo.png" id="logo" alt="logo">
           </a>
           <nav>
             <ul>
