Google maps embed

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
         <p>We are committed to providing caring, professional behavior services and we bring those services to you &mdash; in your home and in your community.</p>
 
         <p>Behavior Solutions of Indiana currently provides services in the following areas:</p>  
-          <ul>
+          <ul id="locations">
             <li>Indianapolis</li>
             <li>Fishers</li>
             <li>Carmel</li>
@@ -56,6 +56,9 @@
             <li>Greenwood</li>
             <li>Zionsville</li>
           </ul>
+
+          <iframe width="475" height="475" frameborder="0" style="border:0"
+          src="https://www.google.com/maps/embed/v1/view?zoom=10&center=39.8204%2C-86.1281&key=AIzaSyBFI1lyuubRNDyCYLiJn2yePKHFiC7pRVI" id="maps-frame"></iframe>
       </main>
 
       <footer>
