--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
       <header>
         <div id="header-wrap">
           <a href="index.html">
-            <img src="images/logo.png" id="logo" alt="logo">
+            <img src="images/logo.png" id="logo" alt="Behavior Solutions of Indiana">
           </a>
           <nav>
             <ul>
@@ -74,7 +74,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-XXXXX-X', 'auto');
+      ga('create', 'UA-58887144-1', 'auto');
       ga('send', 'pageview');
     </script>
   </body>
