OpenGraph meta tags

--- a/app/contact.html
+++ b/app/contact.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="We offer behavior consultation, autism consultation, and ABA therapy for children and families in central Indiana. Let's make a difference together!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Us | Behavior Solutions of Indiana</title>
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="summary">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Contact Us | Behavior Solutions of Indiana" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.behaviorsolutionsindiana.com/contact.html" />
+    <meta property="og:image" content="http://behaviorsolutionsindiana.com/images/logo.png" />
+    <meta property="og:description" content="We offer behavior consultation, autism consultation, and ABA therapy for children and families in central Indiana. Let's make a difference together!" />
 
     <!-- TypeKit Fonts -->
     <script src="//use.typekit.net/ppx2xum.js"></script>
