--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="We offer behavior consultation,autism consultation, and ABA therapy services for children and families in central Indiana. Let's make a difference together!">
+    <meta name="description" content="We offer behavior consultation, autism consultation, and ABA therapy for children and families in central Indiana. Let's make a difference together!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Behavior Solutions of Indiana | Autism Consultation and ABA Therapy</title>
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="summary">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Behavior Solutions of Indiana | Autism Consultation and ABA Therapy" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.behaviorsolutionsindiana.com/index.html" />
+    <meta property="og:image" content="http://behaviorsolutionsindiana.com/images/logo.png" />
+    <meta property="og:description" content="We offer behavior consultation, autism consultation, and ABA therapy for children and families in central Indiana. Let's make a difference together!" />
 
     <!-- TypeKit Fonts -->
     <script src="//use.typekit.net/ppx2xum.js"></script>
