Fixed typo on about.html

--- a/app/about.html
+++ b/app/about.html
@@ -46,7 +46,7 @@
       <main>
         <h1>About Us</h1>
 
-        <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As the mother of four, one of which is has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
+        <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As the mother of four, one of whom has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
 
         <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families.</p>
 
