Typos and formmail working

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
       <main>
         <h1>Why Behavior Solutions of Indiana?</h1>
 
-        <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Programs will be created on an individualized basis and monitored closely to ensure your family receives the services needed with our main goal being to make your days easier.</p>
+        <p>Every person is different and every family has different needs, which is why at Behavior Solutions of Indiana our services are individualized to meet YOUR needs.  Our main goal is to make your days easier. We will create programs on an individualized basis and monitor them closely to ensure your family receives the services you need.</p>
 
         <p>Behavior Solutions of Indiana uses the fundamental principles of Applied Behavior Analysis (ABA) to guide and direct treatment programs helping children with special needs reach their full potential.  We believe in a full family approach.  While programs will be individualized to meet the needs of each child, we feel the best benefit comes when the entire family is engaged and participates in the programming.  Please <a href="contact.html">contact us</a> for more information on our therapy programs.</p>
 
