--- a/app/contact.html
+++ b/app/contact.html
@@ -50,7 +50,7 @@
           <li class="email"><a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></li>
         </ul>
 
-        <form action="/cgi-bin/FormMail.pl" method="post">
+        <form action="/cgi-bin/cgiemail/formmail.txt" method="post">
           <label for="name">Your Name:</label>
           <input type="text" id="name" name="name">
 
