--- a/app/about.html
+++ b/app/about.html
@@ -26,11 +26,11 @@
   </head>
 
   <body>
-    <div id="body-wrap">
+    <div id="body-wrap" itemscope itemtype="http://schema.org/Organization">
       <header>
         <div id="header-wrap">
           <a href="index.html">
-            <img src="images/logo.png" id="logo" alt="logo">
+            <img src="images/logo.png" id="logo" alt="logo" itemprop="logo">
           </a>
           <nav>
             <ul>
@@ -46,7 +46,7 @@
       <main>
         <h1>About Us</h1>
 
-        <p>Behavior Solutions of Indiana is owned and operated by Laura Archer, MA, RBC.  As a mother of four, one of whom has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
+        <p><span itemprop="name">Behavior Solutions of Indiana</span> is owned and operated by <span itemprop="founder">Laura Archer, MA, RBC</span>.  As a mother of four, one of whom has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
 
         <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families.</p>
 
@@ -59,7 +59,7 @@
 
       <footer>
         <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
-        <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
+        <p>Phone: <a href="tel:3173717315" itemprop="telephone">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com" itemprop="email">info@behaviorsolutionsindiana.com</a></p>
         <p>Web Design by Sam Hollis</p>
       </footer>
     </div>
