--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,11 @@
           </nav>
         </div>
       </header>
-
+      <div id="enrollment-banner">
+        <div id="enroll-wrap">
+          <h1><a href="contact.html">Now Enrolling!</a></h1>
+        </div>
+      </div>
       <main>
         <h1>Why Behavior Solutions of Indiana?</h1>
 
@@ -74,11 +78,11 @@
       <footer>
         <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
         <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
+        <p>Like us on <a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
         <p>Web Design by Sam Hollis</p>
       </footer>
     </div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
