Updated to reflect incorporation status

--- a/app/contact.html
+++ b/app/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="We offer behavior consultation, autism consultation, and ABA therapy for children and families in central Indiana. Let's make a difference together!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact Us | Behavior Solutions of Indiana</title>
+    <title>Contact Us | Behavior Solutions of Indiana, Inc.</title>
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
@@ -68,7 +68,7 @@
       </main>
 
       <footer>
-        <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+        <p>Behavior Solutions of Indiana, Inc. | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
         <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
         <p>Like us on <a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
         <p>Web Design by Sam Hollis</p>
