--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="We offer behavior consultation, autism consultation, and ABA therapy for children and families in central Indiana. Let's make a difference together!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Behavior Solutions of Indiana | Autism Consultation and ABA Therapy</title>
+    <title>Behavior Solutions of Indiana, Inc. | Autism Consultation and ABA Therapy</title>
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
 
-  <body>
+  <body>  
     <div id="body-wrap">
       <header>
         <div id="header-wrap">
@@ -76,7 +76,7 @@
       </main>
 
       <footer>
-        <p>Behavior Solutions of Indiana | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
+        <p>Behavior Solutions of Indiana, Inc. | Behavior Consulting, Autism Consultation, and ABA Therapy</p>
         <p>Phone: <a href="tel:3173717315">(317) 371-7315</a>&nbsp;&nbsp;|&nbsp;&nbsp;Email: <a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></p>
         <p>Like us on <a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook!</a></p>
         <p>Web Design by Sam Hollis</p>
