Added FAQ, updated nav links

--- a/app/contact.html
+++ b/app/contact.html
@@ -37,6 +37,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="about.html">About Us</a></li>
+              <li><a href="faqs.html">FAQs</a></li>
               <li><a href="contact.html" class="selected">Contact Us</a></li>
             </ul>
           </nav>
@@ -48,6 +49,7 @@
         <ul class="contact-info">
           <li class="phone"><a href="tel:3173717315">(317) 371-7315</a></li>
           <li class="email"><a href="mailto:info@behaviorsolutionsindiana.com">info@behaviorsolutionsindiana.com</a></li>
+          <li class="facebook"><a href="www.facebook.com/pages/Behavior-Solutions-of-Indiana/326760694194174">Facebook Page</a></li>
         </ul>
 
         <form action="/cgi-bin/cgiemail/formmail.txt" method="post">
