--- a/app/faqs.html
+++ b/app/faqs.html
@@ -36,8 +36,8 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="about.html" class="selected">About Us</a></li>
-              <li><a href="faqs.html">FAQs</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="faqs.html" class="selected">FAQs</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </nav>
@@ -45,17 +45,28 @@
       </header>
 
       <main>
-        <h1>About Us</h1>
-
-        <p><span itemprop="name">Behavior Solutions of Indiana</span> is owned and operated by <span itemprop="founder">Laura Archer, MA, RBC</span>.  As a mother of four, one of whom has autism, she knows first hand what a toll behaviors can take on the entire family.  She has over nine years of experience working directly with special needs children and their families.  Laura received her Master’s of Arts in Applied Behavior Analysis from Ball State University, along with a certificate in Autism, certificate in Rehabilitation/Disability Studies and is registered with the state of Indiana as a Registered Behavior Consultant.</p>
-
-        <p>All of the behavior consultants and behavior technicians at Behavior Solutions of Indiana receive ongoing training to ensure we are providing the most effective and ethical services for our families.</p>
-
-        <img src="images/boy.jpg" alt="boy" id="boy-img">
-
-        <p id="child-first">Our staff prides themselves in a high standard of ethics. We put your child and family first&hellip; where they should be.</p>
-
-        <img src="images/butterfly.png" alt="butterfly" id="butterfly">
+        <h1>FAQs</h1>
+        <b>What do you mean by behavior consultation?</b>
+        <p>At BSI, we strongly believe in full family involvement. With behavior consultations we can assist families in ways to better handle undesired behaviors when they occur, not just if they occur while our trained staff is present.</p>
+        <br />
+        <b>My child does not have an Autism diagnosis. Would we still qualify for services?</b>
+        <p>Absolutely. Most insurance companies do require an ASD diagnosis; however, we believe that Applied Behavior Analysis and behavior modifications assist children with all abilities. This is why we offer assistance on a private pay basis to all families.</p>
+        <br />
+        <b>My insurance does not cover ABA services. What can we do now to get help?</b>
+        <p>This scenario is the main reason we offer the services we do. We have known personally too many families that were placed in this situation; therefore, we offer services on a private pay basis using a sliding fee scale according to income. Getting you the assistance you and your family need and deserve is our top priority. Contact us for further information on how we can work together to get this accomplished.</p>
+        <br />
+        <b>What ages do you treat?</b>
+        <p>We serve clients between the ages of 2 to 18.</p>
+        <br />
+        <b>How many hours of therapy will my child receive each week?</b>
+        <p>While no two children are alike, no two programs are either. We individualize our programs according to each child’s needs and the amount of hours received each week depends on the needs of the child along with the family’s desire. With our parent involvement/consultative approach, the amount of hours each week is typically less than average. We will work together with parents as a team to determine the amount of hours needed for each individual client.</p>
+        <br />
+        <b>What are your hours?</b>
+        <p>We individualize our therapy programs to fit the family’s needs; therefore, our 
+hours are flexible.  This allows us to maximize the child’s sessions in their natural environment.</p>
+        <br />
+        <b>Where are you located?</b>
+        <p>At BSI, we believe in holding our sessions in the child’s natural environment.  We see clients in their home, daycare settings, and community settings.  We assist clients with outings such as doctor appointments, hair salons, shopping, parks and more.  Our trained staff will come to you and your child.</p>
       </main>
 
       <footer>
