--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
 
-  <body>  
+  <body>    
     <div id="body-wrap">
       <header>
         <div id="header-wrap">
@@ -37,6 +37,7 @@
               <li><a href="index.html" class="selected">Home</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="about.html">About Us</a></li>
+              <li><a href="faqs.html">FAQs</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </nav>
