--- a/app/services.html
+++ b/app/services.html
@@ -37,6 +37,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="services.html" class="selected">Services</a></li>
               <li><a href="about.html">About Us</a></li>
+              <li><a href="faqs.html">FAQs</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </nav>
